# Project1

Project1/: CMakeLists.txt  CMakeLists.txtZone.Identifier
Project1/src/: main.cpp  triangulation  triangulation.cpp
